--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "handlebars-dateformat": "^1.1.1",
@@ -19,6 +20,7 @@
     "jquery": "^3.3.1",
     "jsdom": "^13.0.0",
     "mongodb": "^3.1.8",
+    "path": "^0.12.7",
     "xmlhttprequest": "^1.8.0"
   }
 }
